# agesture

./: .gitignore  NEWS  README  TODO  configure.ac
doc/: libraries.txt
prototypes/gstreamer-spectrum/: Makefile  main.c  main.cpp
prototypes/homebrew/: build.sh  main.cpp
prototypes/pd-spectrum/: anal-help.pd  anal.pd
src/: Makefile.am  main.cpp  nearestneighborfinder.cpp  nearestneighborfinder.h
